 cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(0001_Two_Sum solution/0001_Two_Sum.cpp)
add_executable(0002_Add_Two_Numbers solution/0002_Add_Two_Numbers.cpp)
add_executable(0003_Longest_Substring_Without_Repeating_Characters solution/0003_Longest_Substring_Without_Repeating_Characters.cpp)
add_executable(0004_Median_of_Two_Sorted_Arrays solution/0004_Median_of_Two_Sorted_Arrays.cpp)
add_executable(0005_Longest_Palindromic_Substring solution/0005_Longest_Palindromic_Substring.cpp)
add_executable(0006_ZigZag_Conversion solution/0006_ZigZag_Conversion.cpp)
add_executable(0007_Reverse_Integer solution/0007_Reverse_Integer.cpp)
add_executable(0008_String_to_Integer solution/0008_String_to_Integer.cpp)
add_executable(0009_Palindrome_Number solution/0009_Palindrome_Number.cpp)
add_executable(0010_Regular_Expression_Matching solution/0010_Regular_Expression_Matching.cpp)
add_executable(0014_Longest_Common_Prefix solution/0014_Longest_Common_Prefix.cpp)
add_executable(0011_Container_With_Most_Water solution/0011_Container_With_Most_Water.cpp)
add_executable(0012_Integer_to_Roman solution/0012_Integer_to_Roman.cpp)
add_executable(0015_3Sum solution/0015_3Sum.cpp)
add_executable(0887_Projection_Area_of_3D_Shapes solution/0883_Projection_Area_of_3D_Shapes.cpp)
add_executable(0885_Boats_to_Save_People solution/0885_Boats_to_Save_People.cpp)
add_executable(0884_Decoded_String_at_Index solution/0884_Decoded_String_at_Index.cpp)
add_executable(0016_3Sum_Closest solution/0016_3Sum_Closest.cpp)
add_executable(0017_Letter_Combinations_of_a_Phone_Number solution/0017_Letter_Combinations_of_a_Phone_Number.cpp)
add_executable(0018_4Sum solution/0018_4Sum.cpp)
add_executable(0019_Remove_Nth_Node_From_End_of_List solution/0019_Remove_Nth_Node_From_End_of_List.cpp)
add_executable(0020_Valid_Parentheses solution/0020_Valid_Parentheses.cpp)
add_executable(0021_Merge_Two_Sorted_Lists solution/0021_Merge_Two_Sorted_Lists.cpp)
add_executable(0022_Generate_Parentheses solution/0022_Generate_Parentheses.cpp)
add_executable(0024_Swap_Nodes_in_Pairs solution/0024_Swap_Nodes_in_Pairs.cpp)
add_executable(0026_Remove_Duplicates_from_Sorted_Array solution/0026_Remove_Duplicates_from_Sorted_Array.cpp)
add_executable(0027_Remove_Element solution/0027_Remove_Element.cpp)
add_executable(0029_Divide_Two_Integers solution/0029_Divide_Two_Integers.cpp)
add_executable(0031_Next_Permutaion solution/0031_Next_Permutaion.cpp)
add_executable(0914_X_of_a_Kind_in_a_Deck_of_Cards solution/0914_X_of_a_Kind_in_a_Deck_of_Cards.cpp)
add_executable(0915_Partition_Array_into_Disjoint_Intervals solution/0915_Partition_Array_into_Disjoint_Intervals.cpp)
add_executable(0916_Word_Subsets solution/0916_Word_Subsets.cpp)
add_executable(0913_Cat_and_Mouse solution/0913_Cat_and_Mouse.cpp)

add_executable(0033_Search_in_Rotated_Sorted_Array solution/0033_Search_in_Rotated_Sorted_Array.cpp)
add_executable(0035_Count_and_Say solution/0035_Count_and_Say.cpp)

add_executable(0039_Combination_Sum solution/0039_Combination_Sum.cpp)
add_executable(0065_Valid_Number solution/0065_Valid_Number.cpp)
add_executable(0149_Max_Points_on_a_Line solution/0149_Max_Points_on_a_Line.cpp)
add_executable(0032_Longest_Valid_Parentheses solution/0032_Longest_Valid_Parentheses.cpp)
add_executable(0063_Unique_Paths_II solution/0063_Unique_Paths_II.cpp)
add_executable(0064_Minimum_Path_Sum solution/0064_Minimum_Path_Sum.cpp)
add_executable(0072_Edit_Distance solution/0072_Edit_Distance.cpp)
add_executable(0087_Scramble_String solution/0087_Scramble_String.cpp)
add_executable(0198_House_Robber solution/0198_House_Robber.cpp)
add_executable(0213_House_Robber_II solution/0213_House_Robber_II.cpp)
add_executable(0337_House_Robber_III solution/0337_House_Robber_III.cpp)
add_executable(0095_Unique_Binary_Search_Tree_II solution/0095_Unique_Binary_Search_Tree_II.cpp)
add_executable(0095_Unique_Binary_Search_Tree_II_ solution/0095_Unique_Binary_Search_Tree_II_.cpp)
add_executable(0115_Distince_Subsequences solution/0115_Distince_Subsequences.cpp)
add_executable(0120_Triangle solution/0120_Triangle.cpp)
add_executable(0121_Best_Time_to_Buy_and_Sell_Stock solution/0121_Best_Time_to_Buy_and_Sell_Stock.cpp)
add_executable(0122_Best_Time_to_Bug_and_Sell_Stock_II solution/0122_Best_Time_to_Bug_and_Sell_Stock_II.cpp)
add_executable(0123_Best_Time_to_Buy_and_Sell_Stock_III solution/0123_Best_Time_to_Buy_and_Sell_Stock_III.cpp)
add_executable(0152_Maximum_Product_Subarray solution/0152_Maximum_Product_Subarray.cpp)
add_executable(0151_Reverse_Words_in_a_String solution/0151_Reverse_Words_in_a_String.cpp)
add_executable(0304_Range_Sum_Query_2D solution/0304_Range_Sum_Query_2D.cpp)
add_executable(0438_Find_All_Anagrams_in_a_String solution/0438_Find_All_Anagrams_in_a_String.cpp)
add_executable(0309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown solution/0309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown.cpp)
add_executable(0876_Middle_of_the_Linked_List solution/0876_Middle_of_the_Linked_List.cpp)
add_executable(0206_Reverse_Linked_List solution/0206_Reverse_Linked_List.cpp)
add_executable(0023_Merge_k_Sorted_Lists solution/0023_Merge_k_Sorted_Lists.cpp)
add_executable(0025_Reverse_Nodes_in_k-Group solution/0025_Reverse_Nodes_in_k-Group.cpp)
add_executable(0061_Rotate_List solution/0061_Rotate_List.cpp)
add_executable(0086_Partition_List solution/0086_Partition_List.cpp)
add_executable(0082_Remove_Duplicates_from_Sorted_List_II solution/0082_Remove_Duplicates_from_Sorted_List_II.cpp)
add_executable(0083_Remove_Duplicates_from_Sorted_List solution/0083_Remove_Duplicates_from_Sorted_List.cpp)
add_executable(0092_Reverse_Linked_List_II solution/0092_Reverse_Linked_List_II.cpp)
add_executable(0109_Convert_Sorted_List_to_Binary_Search_Tree solution/0109_Convert_Sorted_List_to_Binary_Search_Tree.cpp)
add_executable(0138_Copy_List_with_Random_Pointer solution/0138_Copy_List_with_Random_Pointer.cpp)
add_executable(0141_Linked_List_Cycle solution/0141_Linked_List_Cycle.cpp)
add_executable(0142_Linked_List_Cycle_II solution/0142_Linked_List_Cycle_II.cpp)
add_executable(0143_Reorder_List solution/0143_Reorder_List.cpp)
add_executable(0147_Insertion_Sort_List solution/0147_Insertion_Sort_List.cpp)
add_executable(0148_Sort_List solution/0148_Sort_List.cpp)
add_executable(0160_Intersection_of_Two_Linked_Lists solution/0160_Intersection_of_Two_Linked_Lists.cpp)
add_executable(0203_Remove_Linked_List_Elements solution/0203_Remove_Linked_List_Elements.cpp)
add_executable(0234_Palindrome_Linked_List solution/0234_Palindrome_Linked_List.cpp)
add_executable(0237_Delete_Node_in_a_Linked_List solution/0237_Delete_Node_in_a_Linked_List.cpp)
add_executable(0328_Odd_Even_Linked_List solution/0328_Odd_Even_Linked_List.cpp)
add_executable(0445_Add_Two_Numbers_II solution/0445_Add_Two_Numbers_II.cpp)
add_executable(0725_Split_Linked_List_in_Parts solution/0725_Split_Linked_List_in_Parts.cpp)
add_executable(0707_Design_Linked_List solution/0707_Design_Linked_List.cpp)
add_executable(0817_Lined_List_Components solution/0817_Lined_List_Components.cpp)
add_executable(0430_Flatten_a_Multilevel_Doubly_Linked_List solution/0430_Flatten_a_Multilevel_Doubly_Linked_List.cpp)
add_executable(0042_Trapping_Rain_Water solution/0042_Trapping_Rain_Water.cpp)
add_executable(0071_Simplify_Path solution/0071_Simplify_Path.cpp)
add_executable(0084_Largest_Rectangle_in_Histogram solution/0084_Largest_Rectangle_in_Histogram.cpp)
add_executable(0094_Binary_Tree_Inorder_Traversal solution/0094_Binary_Tree_Inorder_Traversal.cpp)
add_executable(0103_Binary_Tree_Zigzag_Level_Order_Traversal solution/0103_Binary_Tree_Zigzag_Level_Order_Traversal.cpp)
add_executable(0144_Binary_Tree_Preorder_Traversal solution/0144_Binary_Tree_Preorder_Traversal.cpp)
add_executable(0145_Binary_Tree_Postorder_Traversal solution/0145_Binary_Tree_Postorder_Traversal.cpp)
add_executable(0150_Evaluate_Reverse_Polish_Notation solution/0150_Evaluate_Reverse_Polish_Notation.cpp)
add_executable(0155_Min_Stack solution/0155_Min_Stack.cpp)
add_executable(0173_Binary_Search_Tree_Iterator solution/0173_Binary_Search_Tree_Iterator.cpp)
add_executable(0224_Basic_Calculator solution/0224_Basic_Calculator.cpp)
add_executable(0225_Implement_Stack_using_Queues solution/0225_Implement_Stack_using_Queues.cpp)
add_executable(0232_Implement_Queue_using_Stacks solution/0232_Implement_Queue_using_Stacks.cpp)
add_executable(0331_Verify_Preorder_Serialization_of_a_Binary_Tree solution/0331_Verify_Preorder_Serialization_of_a_Binary_Tree.cpp)
add_executable(0341_Flatten_Nested_List_Iterator solution/0341_Flatten_Nested_List_Iterator.cpp)
add_executable(0385_Mini_Parser solution/0385_Mini_Parser.cpp)
add_executable(0394_Decode_String solution/0394_Decode_String.cpp)
add_executable(0402_Remove_K_Digits solution/0402_Remove_K_Digits.cpp)
add_executable(0456_132_Pattern solution/0456_132_Pattern.cpp)
add_executable(0496_Next_Greater_Element_I solution/0496_Next_Greater_Element_I.cpp)
add_executable(0503_Next_Greater_Element_II solution/0503_Next_Greater_Element_II.cpp)
add_executable(0636_Exclusive_Time_of_Function solution/0636_Exclusive_Time_of_Function.cpp)
add_executable(0682_Baseball_Game solution/0682_Baseball_Game.cpp)
add_executable(0735_Asteroid_Collision solution/0735_Asteroid_Collision.cpp)
add_executable(0739_Daily_Temperatures solution/0739_Daily_Temperatures.cpp)
add_executable(0qsort algo101/sort/qsort.cpp)
add_executable(0134_Gas_Station solution/0134_Gas_Station.cpp)
add_executable(0376_Wiggle_Subsequence solution/0376_Wiggle_Subsequence.cpp)
add_executable(0392_Is_Subsequence solution/0392_Is_Subsequence.cpp)
add_executable(0406_Queue_Reconstruction_by_Height solution/0406_Queue_Reconstruction_by_Height.cpp)
add_executable(0435_Non-overlapping_Intervals solution/0435_Non-overlapping_Intervals.cpp)
add_executable(tree algo101/tree.cpp)
add_executable(0452_Minimum_Number_of_Arrows_to_Burst_Balloons solution/0452_Minimum_Number_of_Arrows_to_Burst_Balloons.cpp)
add_executable(0455_Assign_Cookies solution/0455_Assign_Cookies.cpp)
add_executable(0621_Task_Scheduler solution/0621_Task_Scheduler.cpp)
add_executable(0649_Dota2_Senate solution/0649_Dota2_Senate.cpp)
add_executable(0659_Split_Array_into_Consecutive_Subsequences solution/0659_Split_Array_into_Consecutive_Subsequences.cpp)
add_executable(0714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee solution/0714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee.cpp)
add_executable(0738_Monotone_Increasing_Digits solution/0738_Monotone_Increasing_Digits.cpp)
add_executable(0763_Partition_Labels solution/0763_Partition_Labels.cpp)
add_executable(0767_Reorganize_String solution/0767_Reorganize_String.cpp)
add_executable(0842_Split_Array_into_Fibonacci_Sequence solution/0842_Split_Array_into_Fibonacci_Sequence.cpp)
add_executable(0860_Lemonade_Change solution/0860_Lemonade_Change.cpp)
add_executable(0861_Score_After_Flipping_Matrix solution/0861_Score_After_Flipping_Matrix.cpp)
add_executable(0870_Advantage_Shuffle solution/0870_Advantage_Shuffle.cpp)
add_executable(0874_Walking_Robot_Simulation solution/0874_Walking_Robot_Simulation.cpp)
add_executable(0910_Smallest_Range_II solution/0910_Smallest_Range_II.cpp)
add_executable(0921_Minimum_Add_to_Make_Parentheses_Valid solution/0921_Minimum_Add_to_Make_Parentheses_Valid.cpp)
add_executable(0944_Delete_Columns_to_Make_Sorted solution/0944_Delete_Columns_to_Make_Sorted.cpp)
add_executable(0133_Clone_Graph solution/0133_Clone_Graph.cpp)
add_executable(0207_Course_Schedule solution/0207_Course_Schedule.cpp)
add_executable(0210_Course_Schedule_II solution/0210_Course_Schedule_II.cpp)
add_executable(0310_Minimum_Height_Tree solution/0310_Minimum_Height_Tree.cpp)
add_executable(0332_Reconstruct_Itinerary solution/0332_Reconstruct_Itinerary.cpp)
add_executable(0399_Evaluate_Division solution/0399_Evaluate_Division.cpp)
add_executable(0040_Combination_Sum_II solution/0040_Combination_Sum_II.cpp)
add_executable(0043_Multiply_Strings solution/0043_Multiply_Strings.cpp)
add_executable(0058_Length_of_Last_Word solution/0058_Length_of_Last_Word.cpp)
add_executable(0066_Plus_One solution/0066_Plus_One.cpp)
add_executable(0067_Add_Binary solution/0067_Add_Binary.cpp)
add_executable(0046_Permutations solution/0046_Permutations.cpp)
add_executable(0048_Rotate_Image solution/0048_Rotate_Image.cpp)
add_executable(0049_Group_Anagrams solution/0049_Group_Anagrams.cpp)
add_executable(0056_Merge_Intervals solution/0056_Merge_Intervals.cpp)
add_executable(0062_Unique_Paths solution/0062_Unique_Paths.cpp)
add_executable(0075_Sort_Colors solution/0075_Sort_Colors.cpp)
add_executable(0078_Subsets solution/0078_Subsets.cpp)
add_executable(0079_Word_Search solution/0079_Word_Search.cpp)
add_executable(0096_Unique_Binary_Search_Trees solution/0096_Unique_Binary_Search_Trees.cpp)
add_executable(0098_Validate_Binary_Search_Tree "solution/0098_Validate_Binary_Search_Tree.cpp")
add_executable(0102_Binary_Tree_Level_Order_Traversal solution/0102_Binary_Tree_Level_Order_Traversal.cpp)
add_executable(0105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal solution/0105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp)
add_executable(0101_Symmetric_Tree solution/0101_Symmetric_Tree.cpp)
add_executable(0114_Flatten_Binary_Tree_to_Linked_List solution/0114_Flatten_Binary_Tree_to_Linked_List.cpp)
add_executable(0136_Single_Number solution/0136_Single_Number.cpp)
add_executable(0139_Word_Break solution/0139_Word_Break.cpp)
add_executable(0146_LRU_Cache solution/0146_LRU_Cache.cpp)
add_executable(0200_Number_of_Islands solution/0200_Number_of_Islands.cpp)
add_executable(0208_Implement_Trie_Prefix_Tree solution/0208_Implement_Trie_Prefix_Tree.cpp)
add_executable(0215_Kth_Largest_Element_in_an_Array solution/0215_Kth_Largest_Element_in_an_Array.cpp)
add_executable(0041_First_Missing_Positive solution/0041_First_Missing_Positive.cpp)
add_executable(0076_Minimum_Window_Substring solution/0076_Minimum_Window_Substring.cpp)
add_executable(0617_Merge_Two_Binary_Trees solution/0617_Merge_Two_Binary_Trees.cpp)
add_executable(0581_Shortest_Unsorted_Continuous_Subarray solution/0581_Shortest_Unsorted_Continuous_Subarray.cpp)
add_executable(0448_Find_All_Numbers_Disappeared_in_an_Array solution/0448_Find_All_Numbers_Disappeared_in_an_Array.cpp)
add_executable(0543_Diameter_of_Binary_Tree solution/0543_Diameter_of_Binary_Tree.cpp)
add_executable(0238_Product_of_Array_Except_Self solution/0238_Product_of_Array_Except_Self.cpp)
add_executable(0236_Lowest_Common_Ancestor_of_a_Binary_Tree solution/0236_Lowest_Common_Ancestor_of_a_Binary_Tree.cpp)
add_executable(0240_Search_a_2D_Matrix_II solution/0240_Search_a_2D_Matrix_II.cpp)
add_executable(0279_Perfect_Squares solution/0279_Perfect_Squares.cpp)
add_executable(0287_Find_the_Duplicate_Number solution/0287_Find_the_Duplicate_Number.cpp)
add_executable(0300_Longest_Increasing_Subsequence solution/0300_Longest_Increasing_Subsequence.cpp)
add_executable(0560_Subarray_Sum_Equals_k solution/0560_Subarray_Sum_Equals_k.cpp)
add_executable(0437_Path_Sum_III solution/0437_Path_Sum_III.cpp)
add_executable(0322_Coin_Change solution/0322_Coin_Change.cpp)
add_executable(0312_Burst_Balloons solution/0312_Burst_Balloons.cpp)
add_executable(0338_Counting_Bits solution/0338_Counting_Bits.cpp)
add_executable(0416_Partition_Equal_Subset_Sum solution/0416_Partition_Equal_Subset_Sum.cpp)
add_executable(0347_Top_K_Frequent_Elements solution/0347_Top_K_Frequent_Elements.cpp)
add_executable(0050_Powx_n solution/0050_Powx_n.cpp)
add_executable(0054_Spiral_Matrix solution/0054_Spiral_Matrix.cpp)
add_executable(0088_Merge_Sorted_Array solution/0088_Merge_Sorted_Array.cpp)
add_executable(0108_Convert_Sorted_Array_to_Binary_Search_Tree solution/0108_Convert_Sorted_Array_to_Binary_Search_Tree.cpp)
add_executable(0073_Set_Matrix_Zeroes solution/0073_Set_Matrix_Zeroes.cpp)
add_executable(0069_Sqrtx solution/0069_Sqrtx.cpp)
add_executable(0091_Decode_Ways "solution/0091_Decode_Ways.cpp")
add_executable(0118_Pascals_Triangle solution/0118_Pascals_Triangle.cpp)
add_executable(0116_Populating_Next_Right_Pointers_in_Each_Node solution/0116_Populating_Next_Right_Pointers_in_Each_Node.cpp)
add_executable(0125_Valid_Palindrome solution/0125_Valid_Palindrome.cpp)
add_executable(0127_Word_Ladder solution/0127_Word_Ladder.cpp)
add_executable(0130_Surrounded_Regions solution/0130_Surrounded_Regions.cpp)
add_executable(0189_Rotate_Array solution/0189_Rotate_Array.cpp)
add_executable(0162_Find_Peak_Element solution/0162_Find_Peak_Element.cpp)
add_executable(0172_Factorial_Trailing_Zeroes solution/0172_Factorial_Trailing_Zeroes.cpp)
add_executable(0131_Palindrome_Partitioning solution/0131_Palindrome_Partitioning.cpp)
add_executable(0166_Fraction_to_Recurring_Decimal solution/0166_Fraction_to_Recurring_Decimal.cpp)
add_executable(0085_Maximal_Rectangle solution/0085_Maximal_Rectangle.cpp)
add_executable(0124_Binary_Tree_Maximum_Path_Sum solution/0124_Binary_Tree_Maximum_Path_Sum.cpp)
add_executable(0128_Longest_Consecutive_Sequence solution/0128_Longest_Consecutive_Sequence.cpp)
add_executable(0221_Maximal_Square solution/0221_Maximal_Square.cpp)
add_executable(0295_Find_Median_from_Data_Stream solution/0295_Find_Median_from_Data_Stream.cpp)
add_executable(0239_Sliding_Window_Maximum solution/0239_Sliding_Window_Maximum.cpp)
add_executable(0297_Serialize_and_Deserialize_Binary_Tree solution/0297_Serialize_and_Deserialize_Binary_Tree.cpp)
add_executable(0301_Remove_Invalid_Parentheses solution/0301_Remove_Invalid_Parentheses.cpp)
add_executable(0289_Game_of_Life solution/0289_Game_of_Life.cpp)
add_executable(0034_Find_First_and_Last_Position_of_Element_in_Sorted_Array solution/0034_Find_First_and_Last_Position_of_Element_in_Sorted_Array.cpp)

add_executable(0153_Find_Minimum_in_Rotated_Sorted_Array solution/0153_Find_Minimum_in_Rotated_Sorted_Array.cpp)
add_executable(0090_Subsets_II solution/0090_Subsets_II.cpp)
add_executable(0047_Permutations_II solution/0047_Permutations_II.cpp)
add_executable(0053_Maximum_Subarray solution/0053_Maximum_Subarray.cpp)
add_executable(0055_Jump_Game solution/0055_Jump_Game.cpp)
add_executable(0045_Jump_Game_II solution/0045_Jump_Game_II.cpp)
add_executable(1306_Jump_Game_III solution/1306_Jump_Game_III.cpp)
add_executable(0070_Climbing_Stairs solution/0070_Climbing_Stairs.cpp)
add_executable(0104_Maximum_Depth_of_Binary_Tree solution/0104_Maximum_Depth_of_Binary_Tree.cpp)
add_executable(0746_Min_Cost_Climbing_Stairs solution/0746_Min_Cost_Climbing_Stairs.cpp)
add_executable(0931_Minimum_Falling_Path_Sum solution/0931_Minimum_Falling_Path_Sum.cpp)
add_executable(0650_2_Keys_Keyboard solution/0650_2_Keys_Keyboard.cpp)
add_executable(0983_Minimum_Cost_For_Tickets solution/0983_Minimum_Cost_For_Tickets.cpp)
add_executable(1049_Last_Stone_Weight_II solution/1049_Last_Stone_Weight_II.cpp)
add_executable(0474_Ones_and_Zeroes solution/0474_Ones_and_Zeroes.cpp)
add_executable(1155_Number_of_Dice_Rolls_With_Target_Sum solution/1155_Number_of_Dice_Rolls_With_Target_Sum.cpp)
add_executable(0688_Knight_Probability_in_Chessboard solution/0688_Knight_Probability_in_Chessboard.cpp)
add_executable(0494_Target_Sum solution/0494_Target_Sum.cpp)
add_executable(0377_Combination_Sum_IV solution/0377_Combination_Sum_IV.cpp)
add_executable(0935_Knight_Dialer solution/0935_Knight_Dialer.cpp)
add_executable(1223_Dice_Roll_Simulation solution/1223_Dice_Roll_Simulation.cpp)
add_executable(0107_Binary_Tree_Level_Order_Traversal_II solution/0107_Binary_Tree_Level_Order_Traversal_II.cpp)
add_executable(0110_Balanced_Binary_Tree solution/0110_Balanced_Binary_Tree.cpp)
add_executable(0111_Minimum_Depth_of_Binary_Tree solution/0111_Minimum_Depth_of_Binary_Tree.cpp)
add_executable(0112_Path_Sum solution/0112_Path_Sum.cpp)
add_executable(0119_Pascal_s_Triangle_II solution/0119_Pascal_s_Triangle_II.cpp)
add_executable(0168_Excel_Sheet_Column_Title solution/0168_Excel_Sheet_Column_Title.cpp)
add_executable(0190_Reverse_Bits solution/0190_Reverse_Bits.cpp)
add_executable(0205_Isomorphic_Strings solution/0205_Isomorphic_Strings.cpp)
add_executable(0171_Excel_Sheet_Column_Number solution/0171_Excel_Sheet_Column_Number.cpp)
add_executable(0219_Contains_Duplicate_II solution/0219_Contains_Duplicate_II.cpp)
add_executable(0257_Binary_Tree_Paths solution/0257_Binary_Tree_Paths.cpp)
add_executable(0268_Missing_Number solution/0268_Missing_Number.cpp)
add_executable(0278_First_Bad_Version solution/0278_First_Bad_Version.cpp)
add_executable(0290_Word_Pattern solution/0290_Word_Pattern.cpp)
add_executable(0345_Reverse_Vowels_of_a_String solution/0345_Reverse_Vowels_of_a_String.cpp)
add_executable(0299_Bulls_and_Cows solution/0299_Bulls_and_Cows.cpp)
add_executable(0326_Power_of_Three solution/0326_Power_of_Three.cpp)
add_executable(0342_Power_of_Four solution/0342_Power_of_Four.cpp)
add_executable(0367_Valid_Perfect_Square solution/0367_Valid_Perfect_Square.cpp)
add_executable(0374_Guess_Number_Higher_or_Lower solution/0374_Guess_Number_Higher_or_Lower.cpp)
add_executable(0383_Ransom_Note solution/0383_Ransom_Note.cpp)
add_executable(0389_Find_the_Difference solution/0389_Find_the_Difference.cpp)
add_executable(0387_First_Unique_Character_in_a_String solution/0387_First_Unique_Character_in_a_String.cpp)
add_executable(0404_Sum_of_Left_Leaves solution/0404_Sum_of_Left_Leaves.cpp)
add_executable(0405_Convert_a_Number_to_Hexadecimal solution/0405_Convert_a_Number_to_Hexadecimal.cpp)
add_executable(0401_Binary_Watch solution/0401_Binary_Watch.cpp)
add_executable(0409_Longest_Palindrome solution/0409_Longest_Palindrome.cpp)
add_executable(0412_Fizz_Buzz solution/0412_Fizz_Buzz.cpp)
add_executable(0414_Third_Maximum_Number solution/0414_Third_Maximum_Number.cpp)
add_executable(0415_Add_Strings solution/0415_Add_Strings.cpp)
add_executable(0434_Number_of_Segments_in_a_String solution/0434_Number_of_Segments_in_a_String.cpp)
add_executable(0441_Arranging_Coins solution/0441_Arranging_Coins.cpp)
add_executable(0443_String_Compression solution/0443_String_Compression.cpp)
add_executable(0447_Number_of_Boomerangs solution/0447_Number_of_Boomerangs.cpp)
add_executable(0453_Minimum_Moves_to_Equal_Array_Elements solution/0453_Minimum_Moves_to_Equal_Array_Elements.cpp)
add_executable(0459_Repeated_Substring_Pattern solution/0459_Repeated_Substring_Pattern.cpp)
add_executable(0463_Island_Perimeter solution/0463_Island_Perimeter.cpp)
add_executable(0476_Number_Complement solution/0476_Number_Complement.cpp)
add_executable(0482_License_Key_Formatting solution/0482_License_Key_Formatting.cpp)
add_executable(0485_Max_Consecutive_Ones solution/0485_Max_Consecutive_Ones.cpp)
add_executable(0492_Construct_the_Rectangle solution/0492_Construct_the_Rectangle.cpp)
add_executable(0179_Largest_Number solution/0179_Largest_Number.cpp)
add_executable(0220_Contains_Duplicate_III solution/0220_Contains_Duplicate_III.cpp)
add_executable(baidu interview/baidu.cpp)
add_executable(baidu1 interview/baidu1.cpp)
add_executable(baidu2 interview/baidu2.cpp)
add_executable(zijie interview/zijie.cpp)
add_executable(0252_Meeting_Rooms solution/0252_Meeting_Rooms.cpp)
add_executable(0253_Meeting_Rooms_II solution/0253_Meeting_Rooms_II.cpp)
add_executable(0274_H_Index solution/0274_H-Index.cpp)
add_executable(0274_H-Index solution/0274_H-Index.cpp)
add_executable(0280_Wiggle_Sort solution/0280_Wiggle_Sort.cpp)
add_executable(0324_Wiggle_Sort_II solution/0324_Wiggle_Sort_II.cpp)
add_executable(0217_Contains_duplicate solution/0217_Contains_duplicate.cpp)
add_executable(1370_Increasing_Decreasing_String solution/1370_Increasing_Decreasing_String.cpp)
add_executable(1356_Sort_Integers_by_The_Number_of_1_Bits solution/1356_Sort_Integers_by_The_Number_of_1_Bits.cpp)
add_executable(0922_Sort_Array_By_Parity_II solution/0922_Sort_Array_By_Parity_II.cpp)
add_executable(1122_Relative_Sort_Array solution/1122_Relative_Sort_Array.cpp)
add_executable(1030_Matrix_Cells_in_Distance_Order solution/1030_Matrix_Cells_in_Distance_Order.cpp)
add_executable(tencent interview/tencent.cpp)
add_executable(0976_Largest_Perimeter_Triangle solution/0976_Largest_Perimeter_Triangle.cpp)
add_executable(1329_Sort_the_Matrix_Diagonally solution/1329_Sort_the_Matrix_Diagonally.cpp)
add_executable(1305_All_Elements_in_Two_Binary_Search_Trees solution/1305_All_Elements_in_Two_Binary_Search_Trees.cpp)
add_executable(0969_Pancake_Sorting solution/0969_Pancake_Sorting.cpp)
add_executable(stlheap cppstl/stlheap.cpp)
add_executable(0973_K_Closest_Points_to_Origin solution/0973_K_Closest_Points_to_Origin.cpp)
add_executable(1333_Filter_Restaurants_by_Vegan-Friendly_Price_and_Distance solution/1333_Filter_Restaurants_by_Vegan-Friendly_Price_and_Distance.cpp)
add_executable(meituan interview/meituan.cpp)
add_executable(meituan2 interview/meituan2.cpp)
add_executable(meituan3 interview/meituan3.cpp)
add_executable(ali1 interview/ali1.cpp)
add_executable(ali2 interview/ali2.cpp)
add_executable(1366_Rank_Teams_by_Votes solution/1366_Rank_Teams_by_Votes.cpp)
add_executable(0524_Longest_Wrod_in_Dictionary_through_Deleting solution/0524_Longest_Wrod_in_Dictionary_through_Deleting.cpp)
add_executable(0853_Car_Fleet solution/0853_Car_Fleet.cpp)
add_executable(1054_Distant_Barcodes solution/1054_Distant_Barcodes.cpp)
add_executable(1353_Maximum_Number_of_Events_That_Can_Be_Attended solution/1353_Maximum_Number_of_Events_That_Can_Be_Attended.cpp)
add_executable(1290_Convert_Binary_Number_in_a_Linked_List_to_Integer solution/1290_Convert_Binary_Number_in_a_Linked_List_to_Integer.cpp)
add_executable(1019_Next_Greater_Node_In_Linked_List solution/1019_Next_Greater_Node_In_Linked_List.cpp)
add_executable(1171_Remove_Zero_Sum_Consecutive_Nodes_from_Linked_List solution/1171_Remove_Zero_Sum_Consecutive_Nodes_from_Linked_List.cpp)
add_executable(369_Plus_One_Linked_List solution/369_Plus_One_Linked_List.cpp)
add_executable(426_Convert_Binary_Search_Tree_to_Sorted_Doubly_Linked_List solution/426_Convert_Binary_Search_Tree_to_Sorted_Doubly_Linked_List.cpp)